added an image an centered the h1 title

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Recetas Españolas</h1>
+    <center><h1>Recetas Españolas</h1></center>
+    <hr>
+    <center><img src="./images/intro.jpg" alt="Cocina Española" width="500"></center>
     <ul>
-        <li><a href="./recipes/tortilla.html"></a></li>
-        <li><a href="./recipes/paella.html"></a></li>
-        <li><a href="./recipes/croquetas.html"></a></li>
+        <li><a href="./recipes/tortilla.html">Tortilla Española</a></li>
+        <li><a href="./recipes/paella.html">Paella</a></li>
+        <li><a href="./recipes/croquetas.html">Croquetas de Jamón</a></li>
 
     </ul>
 </body>
