--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recetas Españolas</title>
 </head>
-<body>
+<body bgcolor="#EE9582">
+    
     <center><h1>Recetas Españolas</h1></center>
     <hr>
     <center><img src="./images/intro.jpg" alt="Cocina Española" width="500"></center>
