--- a/index.html
+++ b/index.html
@@ -6,16 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recetas Españolas</title>
 </head>
+
+
+
 <body bgcolor="#EE9582">
     
     <center><h1>Recetas Españolas</h1></center>
     <hr>
     <center><img src="./images/intro.jpg" alt="Cocina Española" width="500"></center>
+    <p align="center">Vamos a enseñaros como hacer los platos mas famosos y tipicos de España. <br>
+    Podemos encontrar varios platos pero, estos de aqui son los más famosos y sencillos de hacer.</p>
+
+    <p align="center">Si quieres mas informacion accede a los enlaces de abajo</p>
+    <h4>Recetas mas conocidas</h4>
+
     <ul>
         <li><a href="./recipes/tortilla.html">Tortilla Española</a></li>
         <li><a href="./recipes/paella.html">Paella</a></li>
         <li><a href="./recipes/croquetas.html">Croquetas de Jamón</a></li>
-
+   
     </ul>
 </body>
 </html>
