added images and a description of tortilla and ingredients

--- a/recipes/tortilla.html
+++ b/recipes/tortilla.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Receta de Tortilla</title>
 </head>
-<body>
-    <h1>Tortilla de Patata</h1>
+
+
+
+<body bgcolor="#EE9582">
+    <h1 align="center">Tortilla de Patata</h1>
+    <hr>
+   <center> <img src="../images/tortilla.jpeg" alt="tortilla de Patata"></center>
+   <p>La tortilla española o tortilla española es un plato tradicional de España. Celebrado como plato nacional por los españoles,<br>
+     es una parte esencial de la cocina española. Es una tortilla hecha con huevos y patatas, incluyendo opcionalmente cebolla.<br>
+     Suele servirse a temperatura ambiente como tapa.</p>
+    <h3>Ingredientes necesarios</h3>
+     <ul>
+        <li>4 huevos</li>
+        <li>1 cebolla</li>
+        <li>aceite de oliva</li>
+        <li>sal</li>
+    </ul>
+
 </body>
 </html>
