--- a/recipes/tortilla.html
+++ b/recipes/tortilla.html
@@ -16,6 +16,7 @@
    <p>La tortilla española o tortilla española es un plato tradicional de España. Celebrado como plato nacional por los españoles,<br>
      es una parte esencial de la cocina española. Es una tortilla hecha con huevos y patatas, incluyendo opcionalmente cebolla.<br>
      Suele servirse a temperatura ambiente como tapa.</p>
+
     <h3>Ingredientes necesarios</h3>
      <ul>
         <li>4 huevos</li>
@@ -23,6 +24,15 @@
         <li>aceite de oliva</li>
         <li>sal</li>
     </ul>
+
+    <h3>Pasos para hacer una toritilla</h3>
+        <ol>
+            <li>Cortar la cebolla y freirla oon aceite</li>
+            <li>Batir los huevos</li>
+            <li>Echar los huevos batidos en la sarten con la cebolla</li>
+            <li>Esperar a que se haga la parte de abajo y darle la vuelta</li>
+            <li>Esperar a que se haga la otra parte y terminar</li>
+        </ol>
 
 </body>
 </html>
