added images to the links

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
     <ul>
         <li><a href="./recipes/tortilla.html">Tortilla Española</a></li>
+        <img src="./images/tortilla.jpeg" alt="Tortilla">
         <li><a href="./recipes/paella.html">Paella</a></li>
+        <img src="./images/paella.jpg" alt="Paella" width="270">
         <li><a href="./recipes/croquetas.html">Croquetas de Jamón</a></li>
+        <img src="./images/croquetas.jpg" alt="Croquetas" width="270">
    
     </ul>
 </body>
