--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Receta de Paella</title>
 </head>
-<body>
-    <h1>Paella</h1>
+<body bgcolor="#EE9582">
+    <h1 align="center">Paella</h1>
+    <hr>
+   <center><img src="../images/paella.jpg" alt="paella" width="270"></center>
 </body>
 </html>
