added descriptions and lists

--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -10,5 +10,36 @@
     <h1 align="center">Paella</h1>
     <hr>
    <center><img src="../images/paella.jpg" alt="paella" width="270"></center>
+   <p>La paella, o también arroz a la paella, es una receta de cocina con base de arroz, con origen en la actual Comunidad Valenciana, <br>
+    hoy en día muy popular en toda España y servida en restaurantes de todo el mundo.</p>
+
+    <p>Sin embargo hay que tener cuidado porque los Valencianos son muy estrictos con la receta y con que algo no sea igual que en la receta original <br>
+    no consideraran la paella como paella, sino como arroz con cosas.</p>
+
+    <h3>Ingredientes</h3>
+    <ul>
+        <li>Arroz</li>
+        <li>Pollo</li>
+        <li>Conejo</li>
+        <li>Garrofó</li>
+        <li>Tomate natural rallado</li>
+        <li>Judias verde</li>
+        <li>Aceite de oliva</li>
+        <li>Pimenton rojo</li>
+        <li>Azafrán</li>
+        <li>Sal</li>
+        <li>Agua</li>
+    </ul>
+
+    <h3>Pasos para hacer una Paella</h3>
+    <ol>
+        <li>Sofreir las carnes</li>
+        <li>Sofreir las verduras</li>
+        <li>Echar agua y Pimenton</li>
+        <li>Echar el azafran</li>
+        <li>Echar el arroz</li>
+        <li>Esperar a que se evapore el agua</li>
+        <li>Dejar reposar</li>
+    </ol>
 </body>
 </html>
