Added also links on the images

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <ul>
         <li><a href="./recipes/tortilla.html">Tortilla Española</a></li>
-        <img src="./images/tortilla.jpeg" alt="Tortilla">
+        <a href="./recipes/tortilla.html"><img src="./images/tortilla.jpeg" alt="Tortilla"></a>
         <li><a href="./recipes/paella.html">Paella</a></li>
-        <img src="./images/paella.jpg" alt="Paella" width="270">
+        <a href="./recipes/paella.html"><img src="./images/paella.jpg" alt="Paella" width="270"></a>
         <li><a href="./recipes/croquetas.html">Croquetas de Jamón</a></li>
-        <img src="./images/croquetas.jpg" alt="Croquetas" width="270">
+        <a href="./recipes/croquetas.html"><img src="./images/croquetas.jpg" alt="Croquetas" width="270"></a>
    
     </ul>
 </body>
