added style to the croquetas page

--- a/recipes/croquetas.html
+++ b/recipes/croquetas.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Receta de Croquetas</title>
 </head>
-<body>
-    <h1>Croquetas de Jamón</h1>
+<body bgcolor="#EE9582">
+    <h1 align="center">Croquetas de Jamón</h1>
+    <hr>
+    <center><img src="../images/croquetas.jpg" alt="Croquetas de jamon" width="300"></center>
+    
+    
+
 </body>
 </html>
