Centered some text

--- a/recipes/croquetas.html
+++ b/recipes/croquetas.html
@@ -11,10 +11,10 @@
     <hr>
     <center><img src="../images/croquetas.jpg" alt="Croquetas de jamon" width="300"></center>
     
-    <p>La croqueta es porción de masa hecha de una salsa densa como la bechamel y un picadillo de diversos ingredientes,<br>
+    <p align="center">La croqueta es porción de masa hecha de una salsa densa como la bechamel y un picadillo de diversos ingredientes,<br>
          que ha sido rebozada en huevo y pan rallado, y frita en abundante aceite. Esto le proporciona una textura crujiente y un color dorado.</p>
 
-    <p>Como hemos dicho la croqueta puede llevar distintos rellenos, pero la croqueta que haremos aqui será una croqueta de jamon. <br>
+    <p align="center">Como hemos dicho la croqueta puede llevar distintos rellenos, pero la croqueta que haremos aqui será una croqueta de jamon. <br>
         La clasica.</p>
     
     <h3>Ingredientes</h3>
