--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -10,10 +10,10 @@
     <h1 align="center">Paella</h1>
     <hr>
    <center><img src="../images/paella.jpg" alt="paella" width="270"></center>
-   <p>La paella, o también arroz a la paella, es una receta de cocina con base de arroz, con origen en la actual Comunidad Valenciana, <br>
+   <p align="center">La paella, o también arroz a la paella, es una receta de cocina con base de arroz, con origen en la actual Comunidad Valenciana, <br>
     hoy en día muy popular en toda España y servida en restaurantes de todo el mundo.</p>
 
-    <p>Sin embargo hay que tener cuidado porque los Valencianos son muy estrictos con la receta y con que algo no sea igual que en la receta original <br>
+    <p align="center">Sin embargo hay que tener cuidado porque los Valencianos son muy estrictos con la receta y con que algo no sea igual que en la receta original <br>
     no consideraran la paella como paella, sino como arroz con cosas.</p>
 
     <h3>Ingredientes</h3>
