--- a/recipes/tortilla.html
+++ b/recipes/tortilla.html
@@ -13,7 +13,7 @@
     <h1 align="center">Tortilla de Patata</h1>
     <hr>
    <center> <img src="../images/tortilla.jpeg" alt="tortilla de Patata"></center>
-   <p>La tortilla española o tortilla española es un plato tradicional de España. Celebrado como plato nacional por los españoles,<br>
+   <p align="center">La tortilla española o tortilla española es un plato tradicional de España. Celebrado como plato nacional por los españoles,<br>
      es una parte esencial de la cocina española. Es una tortilla hecha con huevos y patatas, incluyendo opcionalmente cebolla.<br>
      Suele servirse a temperatura ambiente como tapa.</p>
 
