Linked css file to html and added bgcolors and fonts

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recetas Españolas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 
 <body bgcolor="#EE9582">
     
-    <center><h1>Recetas Españolas</h1></center>
+    <center><h1 class="titulos">Recetas Españolas</h1></center>
     <hr>
     <center><img src="./images/intro.jpg" alt="Cocina Española" width="500"></center>
     <p align="center">Vamos a enseñaros como hacer los platos mas famosos y tipicos de España. <br>
     Podemos encontrar varios platos pero, estos de aqui son los más famosos y sencillos de hacer.</p>
 
     <p align="center">Si quieres mas informacion accede a los enlaces de abajo</p>
-    <h2>Recetas mas conocidas</h2>
+    <h2 class="subtitulo">Recetas mas conocidas</h2>
 
-    <ul>
+    <ul class="lista">
         <li><a href="./recipes/tortilla.html">Tortilla Española</a></li>
         <a href="./recipes/tortilla.html"><img src="./images/tortilla.jpeg" alt="Tortilla"></a>
         <li><a href="./recipes/paella.html">Paella</a></li>
