Linked css file to tortilla html and applied classes

--- a/recipes/tortilla.html
+++ b/recipes/tortilla.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receta de Tortilla</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 
 
 <body bgcolor="#EE9582">
-    <h1 align="center">Tortilla de Patata</h1>
+    <h1 class="titulos" align="center">Tortilla de Patata</h1>
     <hr>
    <center> <img src="../images/tortilla.jpeg" alt="tortilla de Patata"></center>
    <p align="center">La tortilla española o tortilla española es un plato tradicional de España. Celebrado como plato nacional por los españoles,<br>
      es una parte esencial de la cocina española. Es una tortilla hecha con huevos y patatas, incluyendo opcionalmente cebolla.<br>
      Suele servirse a temperatura ambiente como tapa.</p>
 
-    <h3>Ingredientes necesarios</h3>
+    <h3 class="subtitulo">Ingredientes necesarios</h3>
      <ul>
         <li>4 huevos</li>
         <li>1 cebolla</li>
@@ -25,7 +26,7 @@
         <li>sal</li>
     </ul>
 
-    <h3>Pasos para hacer una toritilla</h3>
+    <h3 class="subtitulo">Pasos para hacer una toritilla</h3>
         <ol>
             <li>Cortar la cebolla y freirla oon aceite</li>
             <li>Batir los huevos</li>
