added changes to html files to link to css file

--- a/recipes/croquetas.html
+++ b/recipes/croquetas.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receta de Croquetas</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body bgcolor="#EE9582">
-    <h1 align="center">Croquetas de Jamón</h1>
+    <h1 class="titulos" align="center">Croquetas de Jamón</h1>
     <hr>
     <center><img src="../images/croquetas.jpg" alt="Croquetas de jamon" width="300"></center>
     
@@ -17,7 +18,7 @@
     <p align="center">Como hemos dicho la croqueta puede llevar distintos rellenos, pero la croqueta que haremos aqui será una croqueta de jamon. <br>
         La clasica.</p>
     
-    <h3>Ingredientes</h3>
+    <h3 class="subtitulo">Ingredientes</h3>
     <ul>
         <li>Tacos de jamon</li>
         <li>Leche entera</li>
@@ -27,7 +28,7 @@
         <li>Pan Rallado</li>
     </ul>
 
-    <h3>Pasos para hacer Croquetas de Jamon</h3>
+    <h3 class="subtitulo">Pasos para hacer Croquetas de Jamon</h3>
     <ol>
         <li>Mezclar leche y harina y hervir</li>
         <li>Añadir jamon</li>
