--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receta de Paella</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body bgcolor="#EE9582">
-    <h1 align="center">Paella</h1>
+    <h1 class="titulos" align="center">Paella</h1>
     <hr>
    <center><img src="../images/paella.jpg" alt="paella" width="270"></center>
    <p align="center">La paella, o también arroz a la paella, es una receta de cocina con base de arroz, con origen en la actual Comunidad Valenciana, <br>
@@ -16,7 +17,7 @@
     <p align="center">Sin embargo hay que tener cuidado porque los Valencianos son muy estrictos con la receta y con que algo no sea igual que en la receta original <br>
     no consideraran la paella como paella, sino como arroz con cosas.</p>
 
-    <h3>Ingredientes</h3>
+    <h3 class="subtitulo">Ingredientes</h3>
     <ul>
         <li>Arroz</li>
         <li>Pollo</li>
@@ -31,7 +32,7 @@
         <li>Agua</li>
     </ul>
 
-    <h3>Pasos para hacer una Paella</h3>
+    <h3 class="subtitulo">Pasos para hacer una Paella</h3>
     <ol>
         <li>Sofreir las carnes</li>
         <li>Sofreir las verduras</li>
